--- a/index.html
+++ b/index.html
@@ -458,6 +458,89 @@
             </div>
         </section>
         <!--=============================Students feedback end==========================================-->
+        <!--=============================Frequently asked question section start==========================================-->
+        <section class="container mb-5">
+            <div>
+                <div class="text-center">
+                    <h1>Frequently Asked Questions</h1>
+                    <p>It is a long established fact that a reader will be distracted by the readable <br> content of a
+                        page when looking at its layout.</p>
+                </div>
+                <div class="d-flex justify-content-center">
+                    <div class="w-75">
+                        <div class="accordion accordion-flush" id="accordionFlushExample">
+                            <div class="accordion-item">
+                                <h2 class="accordion-header" id="flush-headingOne">
+                                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                        data-bs-target="#flush-collapseOne" aria-expanded="false"
+                                        aria-controls="flush-collapseOne">
+                                        Accordion Item #1
+                                    </button>
+                                </h2>
+                                <div id="flush-collapseOne" class="accordion-collapse collapse"
+                                    aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
+                                    <div class="accordion-body">Placeholder content for this accordion, which is
+                                        intended to
+                                        demonstrate the <code>.accordion-flush</code> class. This is the first item's
+                                        accordion body.</div>
+                                </div>
+                            </div>
+                            <div class="accordion-item">
+                                <h2 class="accordion-header" id="flush-headingTwo">
+                                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                        data-bs-target="#flush-collapseTwo" aria-expanded="false"
+                                        aria-controls="flush-collapseTwo">
+                                        Accordion Item #2
+                                    </button>
+                                </h2>
+                                <div id="flush-collapseTwo" class="accordion-collapse collapse"
+                                    aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
+                                    <div class="accordion-body">Placeholder content for this accordion, which is
+                                        intended to
+                                        demonstrate the <code>.accordion-flush</code> class. This is the second item's
+                                        accordion body. Let's imagine this being filled with some actual content.</div>
+                                </div>
+                            </div>
+                            <div class="accordion-item">
+                                <h2 class="accordion-header" id="flush-headingThree">
+                                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                        data-bs-target="#flush-collapseThree" aria-expanded="false"
+                                        aria-controls="flush-collapseThree">
+                                        Accordion Item #3
+                                    </button>
+                                </h2>
+                                <div id="flush-collapseThree" class="accordion-collapse collapse"
+                                    aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
+                                    <div class="accordion-body">Placeholder content for this accordion, which is
+                                        intended to
+                                        demonstrate the <code>.accordion-flush</code> class. This is the third item's
+                                        accordion body. Nothing more exciting happening here in terms of content, but
+                                        just
+                                        filling up the space to make it look, at least at first glance, a bit more
+                                        representative of how this would look in a real-world application.</div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!--=============================Frequently asked question section end==========================================-->
+        <!--=============================Trusted company section start==========================================-->
+        <section class="container mb-5">
+            <div class="text-center">
+                <h1>Trusted by over 800+ companies</h1>
+            </div>
+            <div class="d-flex justify-content-between mt-5">
+                <img class="img-fluid" src="./images/company/company-1.png" alt="">
+                <img class="img-fluid" src="./images/company/company-2.png" alt="">
+                <img class="img-fluid" src="./images/company/company-3.png" alt="">
+                <img class="img-fluid" src="./images/company/company-4.png" alt="">
+                <img class="img-fluid" src="./images/company/company-5.png" alt="">
+                <img class="img-fluid" src="./images/company/company-6.png" alt="">
+            </div>
+        </section>
+        <!--=============================Trusted company section end==========================================-->
     </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
