--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 <div class="carousel-inner">
                     <div class="carousel-item active">
                         <img src="./images/cover/cover-1.png" class="d-block w-100" alt="...">
-                        <div class="carousel-caption d-none d-md-block">
+                        <div class="carousel-caption d-none d-md-none d-lg-block">
                             <h1 class="fs-1 fw-bolder">Get Started Digital <br> Learning</h1>
                             <p class="fs-5 edtech-p-white">We consider it to be learning that's facilitated, enabled or
                                 mediated using electronic technology for the explicit purpose of training, learning or
@@ -69,7 +69,7 @@
                     </div>
                     <div class="carousel-item">
                         <img src="./images/cover/cover-2.png" class="d-block w-100" alt="...">
-                        <div class="carousel-caption d-none d-md-block">
+                        <div class="carousel-caption d-none d-md-none d-lg-block">
                             <h1 class="fs-1 fw-bolder">Get Started Digital <br> Learning</h1>
                             <p class="fs-5 edtech-p-white">We consider it to be learning that's facilitated, enabled or
                                 mediated using electronic technology for the explicit purpose of training, learning or
@@ -79,7 +79,7 @@
                     </div>
                     <div class="carousel-item">
                         <img src="./images/cover/cover-3.png" class="d-block w-100" alt="...">
-                        <div class="carousel-caption d-none d-md-block">
+                        <div class="carousel-caption d-none d-md-none d-lg-block">
                             <h1 class="fs-1 fw-bolder">Get Started Digital <br> Learning</h1>
                             <p class="fs-5 edtech-p-white">We consider it to be learning that's facilitated, enabled or
                                 mediated using electronic technology for the explicit purpose of training, learning or
@@ -235,20 +235,17 @@
             <div>
                 <div class="card mb-3 edtech-e-learning-bg">
                     <div class="row g-0">
-                        <div class="col-sm-12 col-md-5">
+                        <div class="col-12 col-md-5 col-lg-5">
                             <img src="./images/working.png" class="img-fluid rounded-start w-100" alt="...">
                         </div>
-                        <div class="col-sm-12 col-md-7">
-                            <div class="card-body m-md-5 px-md-5 pt-md-5 m-sm-0 px-sm-0 pt-sm-0">
+                        <div class="col-12 col-md-7 col-lg-5">
+                            <div class="card-body m-2 m-md-2 m-lg-5 px-2 px-md-2 px-lg-5 pt-2 pt-lg-2 pt-md-2 m-0">
                                 <h1 class="card-title">Explore The elearning <br> Institute</h1>
                                 <p class="card-text">Explore Learning was announced as the winner of the People’s Choice
                                     award in this year’s National Tutoring Awards on Friday 8th July. The event,
                                     organised by the Tutor’s Association, celebrated the impact tutors and tuition
                                     businesses throughout the country have had this year.
-                                    Explore Learning was announced as the winner of the People’s Choice award in this
-                                    year’s National Tutoring Awards on Friday 8th July. The event, organised by the
-                                    Tutor’s Association, celebrated the impact tutors and tuition businesses throughout
-                                    the country have had this year.</p>
+                                    National Tutoring Awards on Friday 8th July. The event, organised by the.</p>
                                 <div class="d-flex my-5">
                                     <div class="me-sm-0 me-md-5">
                                         <h3>3.2K+</h3>
@@ -272,8 +269,8 @@
         </section>
         <!--=============================Explore e-Learning section end==========================================-->
         <!--=============================Ready to join section Start==========================================-->
-        <section class="container edtech-join-bg rounded-4 d-flex align-items-center p-5 my-5" id="join">
-            <div class="row">
+        <section class="container edtech-join-bg rounded-4 p-5 my-5" id="join">
+            <div class="row d-flex flex-column flex-md-column flex-lg-row justify-content-evenly align-items-center">
                 <div class="col-10 text-white">
                     <h1>Ready To Join?</h1>
                     <p class="edtech-p-white">"Coming together is a beginning, staying together is progress, and working
@@ -336,8 +333,8 @@
                     we win or <br> lose, we have applied the best of ourselves to the task at hand.</p>
             </div>
             <div>
-                <div class="row">
-                    <div class="col-3">
+                <div class="row g-3">
+                    <div class="col-12 col-md-6 col-lg-3">
                         <div class="card">
                             <img src="./images/student/student-1.png" class="card-img-top" alt="...">
                             <div class="card-body">
@@ -346,7 +343,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-3">
+                    <div class="col-12 col-md-6 col-lg-3">
                         <div class="card">
                             <img src="./images/student/student-2.png" class="card-img-top" alt="...">
                             <div class="card-body">
@@ -355,7 +352,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-3">
+                    <div class="col-12 col-md-6 col-lg-3">
                         <div class="card">
                             <img src="./images/student/student-3.png" class="card-img-top" alt="...">
                             <div class="card-body">
@@ -364,7 +361,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-3">
+                    <div class="col-12 col-md-6 col-lg-3">
                         <div class="card">
                             <img src="./images/student/student-4.png" class="card-img-top" alt="...">
                             <div class="card-body">
@@ -389,8 +386,8 @@
                         whether
                         we win or <br> lose, we have applied the best of ourselves to the task at hand.</p>
                 </div>
-                <div class="row">
-                    <div class="col-sm-6">
+                <div class="row g-3">
+                    <div class="col-12 col-md-12 col-lg-6">
                         <div class="card">
                             <div class="card-body">
                                 <h5 class="card-title d-flex justify-content-between">
@@ -409,6 +406,7 @@
                                     feel comfortable sharing good or bad news with us. I’m so sorry that your with us
                                     fell short of expectations. I also want to thank you for giving us a chance to make
                                     things right.
+                                    Thanks so much for sharing your experience with us.
                                 </p>
                                 <div class="d-flex">
                                     <div>
@@ -422,7 +420,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-sm-6">
+                    <div class="col-12 col-md-12 col-lg-6">
                         <div class="card">
                             <div class="card-body">
                                 <h5 class="card-title d-flex justify-content-between">
@@ -562,7 +560,7 @@
         </section>
         <!--=============================Frequently asked question section end==========================================-->
         <!--=============================Trusted company section start==========================================-->
-        <section class="container mb-5">
+        <section class="container mb-5 d-lg-block d-md-none d-none">
             <div class="text-center">
                 <h1>Trusted by over 800+ companies</h1>
             </div>
