--- a/index.html
+++ b/index.html
@@ -116,7 +116,8 @@
                         <div class="card mb-3">
                             <div class="row g-0">
                                 <div class="col-md-4">
-                                    <img src="./images/course/course-1.png" class="img-fluid rounded-start" alt="...">
+                                    <img src="./images/course/course-1.png" class="img-fluid rounded-start w-100"
+                                        alt="...">
                                 </div>
                                 <div class="col-md-8">
                                     <div class="card-body pb-0 pt-3">
@@ -136,7 +137,8 @@
                         <div class="card mb-3">
                             <div class="row g-0">
                                 <div class="col-md-4">
-                                    <img src="./images/course/course-2.png" class="img-fluid rounded-start" alt="...">
+                                    <img src="./images/course/course-2.png" class="img-fluid rounded-start w-100"
+                                        alt="...">
                                 </div>
                                 <div class="col-md-8">
                                     <div class="card-body pb-0 pt-3">
@@ -155,7 +157,8 @@
                         <div class="card mb-3">
                             <div class="row g-0">
                                 <div class="col-md-4">
-                                    <img src="./images/course/course-3.png" class="img-fluid rounded-start" alt="...">
+                                    <img src="./images/course/course-3.png" class="img-fluid rounded-start w-100"
+                                        alt="...">
                                 </div>
                                 <div class="col-md-8">
                                     <div class="card-body pb-0 pt-3">
@@ -173,7 +176,8 @@
                         <div class="card mb-3">
                             <div class="row g-0">
                                 <div class="col-md-4">
-                                    <img src="./images/course/course-4.png" class="img-fluid rounded-start" alt="...">
+                                    <img src="./images/course/course-4.png" class="img-fluid rounded-start w-100"
+                                        alt="...">
                                 </div>
                                 <div class="col-md-8">
                                     <div class="card-body pb-0 pt-3">
@@ -191,7 +195,8 @@
                         <div class="card mb-3">
                             <div class="row g-0">
                                 <div class="col-md-4">
-                                    <img src="./images/course/course-5.png" class="img-fluid rounded-start" alt="...">
+                                    <img src="./images/course/course-5.png" class="img-fluid rounded-start w-100"
+                                        alt="...">
                                 </div>
                                 <div class="col-md-8">
                                     <div class="card-body pb-0 pt-3">
@@ -209,7 +214,8 @@
                         <div class="card mb-3">
                             <div class="row g-0">
                                 <div class="col-md-4">
-                                    <img src="./images/course/course-6.png" class="img-fluid rounded-start" alt="...">
+                                    <img src="./images/course/course-6.png" class="img-fluid rounded-start w-100"
+                                        alt="...">
                                 </div>
                                 <div class="col-md-8">
                                     <div class="card-body pb-0 pt-3">
@@ -236,7 +242,8 @@
                 <div class="card mb-3 edtech-e-learning-bg">
                     <div class="row g-0">
                         <div class="col-12 col-md-5 col-lg-5">
-                            <img src="./images/working.png" class="img-fluid rounded-start w-100" alt="...">
+                            <img src="./images/working.png" class="img-fluid rounded-start w-100 h-100 h-md-100"
+                                alt="...">
                         </div>
                         <div class="col-12 col-md-7 col-lg-5">
                             <div class="card-body m-2 m-md-2 m-lg-5 px-2 px-md-2 px-lg-5 pt-2 pt-lg-2 pt-md-2 m-0">
@@ -270,13 +277,13 @@
         <!--=============================Explore e-Learning section end==========================================-->
         <!--=============================Ready to join section Start==========================================-->
         <section class="container edtech-join-bg rounded-4 p-5 my-5" id="join">
-            <div class="row d-flex flex-column flex-md-column flex-lg-row justify-content-evenly align-items-center">
-                <div class="col-10 text-white">
+            <div class="row d-flex flex-column flex-md-column flex-lg-row justify-content-center align-items-center">
+                <div class="col-12 col-md-12 col-lg-10 text-white">
                     <h1>Ready To Join?</h1>
                     <p class="edtech-p-white">"Coming together is a beginning, staying together is progress, and working
                         together is success." – Henry Ford </p>
                 </div>
-                <div class="col-2">
+                <div class="col-12 col-md-12 col-lg-2">
                     <button type="button" class="btn edtech-join-btn my-5 mx-auto" data-bs-toggle="modal"
                         data-bs-target="#ModalForm">
                         Registar
